--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
 	max-width: 940px;
 	margin: 0 auto;
 	padding: 0 5%;
+	font-size: 1.3em;
 }
 
 a {
@@ -49,13 +50,13 @@ header {
 h1 {
 	font-family: 'Bree Serif', serif;
 	margin: 15px 0;
-	font-size: 2em;
+	font-size: 3em;
 	font-weight: normal;
 	line-height: 0.8em;
 }
 
 h2 {
-	font-size: 1.2em;
+	font-size: 2em;
 	margin: -5px 0 0;
 	font-weight: normal;
 }
@@ -68,6 +69,7 @@ nav {
 	text-align: center;
 	padding: 10px 0;
 	margin: 20px 0 0;
+	font-size: 1.2em;
 }
 
 nav ul {
@@ -90,7 +92,7 @@ FOOTER STYLES
 ****************/
 
 footer {
-	font-size: 0.75em;
+	font-size: 1em;
 	text-align: center;
 	padding-top: 50px;
 	color: #ccc;
@@ -98,8 +100,8 @@ footer {
 }
 
 .social-icon {
-	width: 20px;
-	height: 20px;
+	width: 30px;
+	height: 30px;
 	margin: 0 5px;
 }
 
@@ -118,14 +120,14 @@ PAGE: PORTFOLIO STYLES
 	width: 45%;
 	margin: 2.5%;
 	background-color: #f5f5f5;
-	color: #bdc3c7;
+	color: #aaa;
 }
 
 #gallery li a p {
 	margin: 0;
 	padding: 5%;
-	font-size: 0.75em;
-	color: #bdc3c7;
+	font-size: 1em;
+	color: #aaa;
 }
 
 /****************
@@ -147,7 +149,7 @@ PAGE: CONTACT STYLES
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	font-size: 0.9em;
+	font-size: 1.3em;
 }
 
 .contact-info a {
@@ -178,7 +180,7 @@ COLOR STYLES
 /* Site Body */
 body {
 	background-color: white;
-	color: #999;
+	color: #aaa;
 }
 
 /* Green Header */
