--- a/css/responsive.css
+++ b/css/responsive.css
@@ -45,6 +45,11 @@ MEDIA QUERIES
 	font-size: 1.5em;
 }
 
+	nav a {
+	font-weight: 700;
+	padding: 15px 5px;
+}
+
 }
 
 
@@ -92,6 +97,11 @@ MEDIA QUERIES
 		width: 100%;
 		margin: 0 auto;
 	}
+
+	nav a {
+	font-weight: 700;
+	padding: 15px 12px;
+}
 }
 
 
